test/visibility/private/iters/accessesOther.good
accessesOther.chpl:1: In module 'OuterModule':
accessesOther.chpl:11: error: cannot access 'foo' as it is private to 'M1'
